@@ -308,11 +308,18 @@
     rose_label_font_path = /usr/share/fonts/truetype/freefont/FreeMonoBold.ttf
     rose_label_font_size  = 10
     rose_label_font_color = 0x000000
-    
-    
+
     # Default colors for the plot lines. These can be overridden for
     # individual lines using option 'color'
     chart_line_colors = 0xb48242, 0x4242b4, 0x42b442
+    
+	# Type of line. Only 'solid' or 'none' is offered now    
+    line_type = 'solid'
+
+    # Size of marker in pixels
+    marker_size = 8
+	# Type of marker. Pick one of 'cross', 'x', 'circle', 'box', or none
+    marker_type ='none'
     
     ##
     ## What follows is a list of subsections, each specifying a time span, such
